# uStorage

./: .gitignore  LICENSE  readme.md
ustorage/: pyproject.toml
ustorage/templates/: index.html
ustorage/tests/: test_ustorage.py
ustorage/ustorage/: __main__.py
